感谢写了一些

--- a/appendix/remerciement.tex
+++ b/appendix/remerciement.tex
@@ -3,3 +3,14 @@
 %---------------------------------------------------------------------------------
 \chapter*{致\qquad{}谢}
 \addcontentsline{toc}{chapter}{致谢}
+时光荏苒，
+转眼之间，
+3年的研究生生涯即将过去，
+呆了7年的交大也要离开了。
+交大的7年承载了我最美好的大学时光，
+让我从一个青涩少年成长为一个敢于担当的青年。
+7年一路走来，有那么人在帮助我，让我心怀感恩。
+\par
+首先，我要感谢我的导师陈庆春教授，本论文是在陈老师的悉心指导下完成的。在我本科期间，陈老师就指导了我的SRTP，当时陈老师渊博的专业知识、严谨的学术态度让我印象深刻。很自然地，硕士期间我也成为了陈老师的学生。回顾这三年来，学习上的
+\par
+其次，我要感谢实验室的一帮小伙伴们
