--- a/content/chap03.tex
+++ b/content/chap03.tex
@@ -501,12 +501,11 @@ NC层维护了一个编码缓存，用于存放从TCP层下来的数据包。每
 \end{figure}
 %%%%%%%%%%%%%%%%%%%%%%
 \par
-编码过程比较简单，算法\ref{algo3}展示了如何对处于编码缓存中的数据包进行编码。当选择的数域足够大时，产生线性相关的编码包的概率可以忽略\textsuperscript{\cite{fragouli2006network}}，本文选择在$GF\left(2^8\right)$上进行各种代数运算。
+编码过程比较简单，算法\ref{algo:bianma}展示了如何对处于编码缓存中的数据包进行编码。当选择的数域足够大时，产生线性相关的编码包的概率可以忽略\textsuperscript{\cite{fragouli2006network}}，本文选择在$GF\left(2^8\right)$上进行各种代数运算。
 \renewcommand{\algorithmcfname}{算法}
 \begin{algorithm}
 	\caption{对数据包进行编码} 
-	
-	\label{algo3}
+	\label{algo:bianma}
 	\SetKwInOut{Input}{\textbf{输入}}\SetKwInOut{Output}{\textbf{输出}}
 	\Input{\\
 		冗余度因子 $R$;\\
@@ -732,7 +731,7 @@ decoded队列主要用于存放已经解码出的报文。值得注意的是，d
 	\caption{接收端NC层窗口值设定}
 	\label{RCVWND_EPS}
 \end{figure}
-\section{模拟丢包测试结果}
+\section{模拟丢包测试结果}\label{sec:monidiubaoceshijieguo}
 本文在Raspberry pi上实现部署了TCP/NC协议，
 为了精确控制链路的丢包率，
 我们在接收端的IF\_IP\_PRE\_ROUTING和IF\_IP\_POST\_ROUTING这两处挂载了丢包函数，
@@ -745,7 +744,10 @@ decoded队列主要用于存放已经解码出的报文。值得注意的是，d
 	\label{TUOPU_EPS}
 \end{figure}
 \par
-由于NC层掩盖了丢包，而TCP-Reno的拥塞控制策略是基于丢包的，因此文献\cite{Sundararajan2009}没有采用TCP-Reno版本，而使用了TCP-Vegas。
+由于NC层掩盖了丢包，
+而TCP-Reno的拥塞控制策略是基于丢包的，
+因此文献\cite{Sundararajan2009}没有采用TCP-Reno版本，
+而使用了TCP-Vegas。
 TCP-Vegas采用基于RTT的估计来进行拥塞控制，
 利用TCP-Vegas做为TCP/NC的上层TCP版本可以兼顾多连接的平衡性。
 但是我们也看到，
@@ -753,7 +755,8 @@ TCP/NC的随机丢包在上层看来是RTT的增大\textsuperscript{\cite{Sundar
 如果采用TCP-Vegas的话，
 就会让TCP-Vegas认为链路容量减小，
 降低发送速度。
-对于无人机视频传输来说，多条TCP连接传输的平衡性不在考虑之内，
+对于无人机视频传输来说，
+多条TCP连接传输的平衡性不在考虑之内，
 因此采用TCP-Reno作为TCP/NC的上层TCP协议。
 测试环境参数如表\ref{tab:CESHI}。
 \begin{table}[htp]
@@ -771,14 +774,53 @@ TCP/NC的随机丢包在上层看来是RTT的增大\textsuperscript{\cite{Sundar
 		操作系统 &Debian\tabularnewline
 		内核版本 &Linux 3.18\tabularnewline
 		TCP协议版本 &TCP-Reno\tabularnewline
-		测试软件 &iperf\tabularnewline
+		测试工具 &iperf\tabularnewline
 		测试时间 &60秒\tabularnewline
 		\bottomrule
 	\end{tabular}
 \end{table}
 \par
-首先测试了冗余度\emph{R}对吞吐率的影响。这里固定链路丢包率为$5\%$。测试结果如图。
+首先测试了冗余度\emph{R}对吞吐率的影响。
+这里固定链路丢包率为$5\%$，冗余度变化范围为$1 \sim 1.65$。
+测试结果如图\ref{REDUNDANCY_EPS}。
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[width=4in]{figures/redundancy.eps}
+	\caption{吞吐率-冗余度}
+	\label{REDUNDANCY_EPS}
+\end{figure}
 \par
+理论上，当冗余度$R=\frac{1}{1-0.05}=1.05$时，
+吞吐率应该达到最大。
+但考虑到我们发送冗余包的方式（ 见算法\ref{algo:bianma}）,
+即每次发送$\left\lfloor NUM+R \right\rfloor$个编码包，
+冗余编码包的分布不是均匀的，
+丢包却是随机丢包，
+很大概率上丢包和冗余包在时间上错位严重，
+一个丢包得经过很长时间才能等来一个补偿它的冗余包，
+解码端报文积累严重，
+而解码端的解码矩阵维度是有限的，
+当解码矩阵满了，
+而冗余包还未到时，
+接收端就会将后面来的报文丢掉，
+影响TCP/NC的吞吐率。
+如图\ref{REDUNDANCY_EPS}所示，
+当冗余度$R=1.3$时，吞吐率达到峰值。
+随着冗余度进一步增大，
+链路吞吐率出现了小幅下降，
+这是由于编码码率下降的原因，
+也符合我们的认知。
+\par
+从图\ref{REDUNDANCY_EPS}也可以看到，
+峰值速率才达到12Mbps，
+这与Raspberry Pi所使用的百兆网卡极不匹配。
+由于编解码模块相当耗费资源，
+包括时间、内存，
+而编解码过程全部在内核的软中断中实现，
+Raspberry Pi的性能不够，
+所以很大程度影响了最终的吞吐率。
+\par
+接着，我们对不同丢包率下TCP和TCP/NC的性能进行了对比测试。
 \section{本章小结}
 本章主要讲了TCP/NC协议的实现技术细节。
 阐述了如何对数据包进行编码，
@@ -786,4 +828,4 @@ TCP/NC的随机丢包在上层看来是RTT的增大\textsuperscript{\cite{Sundar
 对TCP/NC协议实现过程中的关键环节进行了详细描述，
 包括NC头部设计、NC编码缓存、NC解码缓存和NC层接收窗口的计算。
 最后在模拟无人机视频传输丢包环境中，
-测试TCP/NC的实际性能。
+测试TCP/NC的实际性能
