--- a/content/chap04.tex
+++ b/content/chap04.tex
@@ -2,7 +2,15 @@
 %                西南交通大学研究生学位论文：第四章内容
 %---------------------------------------------------------------------------------
 \chapter{TCP/NC的改进及真实环境测试}
-本章主要对TCP/NC给出几点改进，实现增强TCP/NC协议，即E-TCP/NC，并在真实无人机视频传输环境中验证相关性能。提出了前向重传机制以应对一个RTO内的突发丢包；提出了一种新的自适应冗余度算法以应对网络的变化；对冗余包的发送时机给出改进以降低平均解码时延；设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；改进编码系数的设定以降低首部开销。
+本章主要对TCP/NC给出几点改进，
+实现增强TCP/NC协议，
+即E-TCP/NC，
+并在真实无人机视频传输环境中验证相关性能。
+提出了前向重传机制以应对一个RTO内的突发丢包；
+提出了一种新的自适应冗余度算法以应对网络的变化；
+对冗余包的发送时机给出改进以降低平均解码时延；
+设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；
+改进编码系数的设定以降低首部开销。
 \section{前向重传机制}
 \subsection{TCP/NC的突发丢包问题}
 通过冗余编码，TCP/NC可以很好地应对随机丢包网络的丢包。但当突发丢包发生时，TCP/NC表现就不好了。当突发丢包产生时，一般会要求重传，而TCP/NC的报文重传任务完全依赖TCP层，不能很好地处理一个RTO内的连续报文丢失。无人机的工作环境决定了大尺度衰落信道环境经常出现，会导致一连串的突发丢包，进而影响基于TCP/NC协议的无人机视频传输流畅度。为了进一步提高无人机视频传输的性能，本文提出了一种前向重传机制，能够同时高效地重传多个报文。
@@ -96,7 +104,18 @@ TCP-Reno对于一个RTO内报文的连续丢失采取的是单个依次重传的
 考虑到重传序列如果再丢失对性能损失比较大，本文对重传报文进行再编码。在重传了\emph{re\_list}的所有不编码原始报文后，再重传$\left\lceil {R \times num\_re} \right\rceil  - num\_re$个编码报文，其中\emph{R}表示冗余度，\emph{num\_re}表示\emph{re\_list}中重传报文的个数。这里设置了一个阈值\emph{threshWnd}，如果\emph{re\_list}的报文个数小于\emph{threshWnd}，那么就对\emph{re\_list}的所有报文进行编码，换句话说编码包是由所有\emph{re\_list}链表中的报文组成；如果\emph{re\_list}的报文个数大于\emph{threshWnd}，那么就对\emph{re\_list}前\emph{threshWnd}个报文进行编码。这样处理的目的是为了降低解码端的解码时延。重传编码报文的\emph{报文状态}域填写方式参照表\ref{tab:BWZT}。
 
 \section{改进冗余包发送时机}
-文献\cite{Sundararajan2009}中冗余包分布并非均匀分布。给定一个固定冗余度，其冗余特性并没有体现在每个编码包中。因此本文重新设计了冗余包的发送时机。假定冗余度为\emph{R} （ $R \ge 1$ ），对于从TCP层下来的每个报文，以$R - \left\lfloor R \right\rfloor$的概率发送 $\left\lfloor R+1 \right\rfloor$个编码包；以$1-\left(R-\left\lfloor R \right\rfloor\right)$的概率发送$\left\lfloor R \right\rfloor$个编码包。这样冗余度均匀分布在每个数据包中了。
+文献\cite{Sundararajan2009}中冗余包分布并非均匀分布。
+给定一个固定冗余度，
+其冗余特性并没有体现在每个编码包中，
+导致冗余包和丢包在时间上错位严重，
+影响链路吞吐率，
+增大了传输时延。
+因此本文重新设计了冗余包的发送时机。
+假定冗余度为\emph{R} （ $R \ge 1$ ），
+对于从TCP层下来的每个报文，
+以$R - \left\lfloor R \right\rfloor$的概率发送 $\left\lfloor R+1 \right\rfloor$个编码包；
+以$1-\left(R-\left\lfloor R \right\rfloor\right)$的概率发送$\left\lfloor R \right\rfloor$个编码包。
+这样冗余度均匀分布在每个数据包中了。
 \section{自适应冗余度算法}
 文献\cite{Sundararajan2009}中并没有给出冗余因子\emph{R}的设置规则。直觉告诉我们，将\emph{R}设置为一个常量值是不合适的。现实中的网络环境，尤其是无线环境，其丢包率是在变动的。在设置冗余因子时，如果\emph{R}过小，那么冗余信息不足以掩盖链路中的丢包；如果\emph{R}值过大，编码码率就过小，降低网络的有效吞吐率。因此需要找出一种能够根据网络状况自适应调整冗余度的方法，最大化地利用网络带宽。
 \par
