--- a/content/conclusion.tex
+++ b/content/conclusion.tex
@@ -3,8 +3,42 @@
 %---------------------------------------------------------------------------------
 \chapter*{结\qquad{}论}
 \addcontentsline{toc}{chapter}{结论}
-
-恭喜已经到达学位论文的结论部分！
-
+本章将对本论文的工作进行总结，
+并对后续进一步的研究问题进行讨论。
+\section*{本文工作总结}
+随着集成电路技术、通讯技术的飞速发展，
+无人机航拍逐渐成了普通人都可以应用的一项技术。
+由于设备价格低廉、未来5G时代万物互联的前景，
+基于现有TCP/IP协议栈体系的无人机视频传输技术仍然具有很大前景。
+由于无人机工作于室外空域，
+面临的是典型的大尺度衰落信道环境，
+丢包、错包频繁，
+面向有线网络设计的标准TCP无法很好应对这种场景，
+导致无人机视频传输吞吐率上不去、时延很大。
 \par
-祝贺您在推动人类科学发展的道路上又迈进了七十亿分之一。
+本文首先分析了基于TCP协议的无人机视频传输所面临的问题，
+查阅了大量文献，总结了前人做出的关于提高TCP在有损信道环境下的表现的工作。
+重点分析论述了Sundararajan等人的工作，即TCP/NC。
+在Raspberry Pi上实现了TCP/NC协议，
+并对TCP/NC在有损信道环境下的表现做了测试、分析。
+与前人工作不同的是，
+在详细比较了Batch Coding和Pipeline Coding的优缺点后，
+根据TCP协议的滑动窗口概念，
+采用了Pipeline Coding编码方式实现网络编码。
+\par
+针对TCP/NC在无人机视频传输应用场景中所存在的问题，
+本文对其做了进一步改进，实现增强TCP/NC协议，即E-TCP/NC。
+提出了前向重传机制以应对一个RTO内的突发丢包；
+提出了一种新的自适应冗余度算法以应对网络的变化；
+对冗余包的发送时机给出改进以降低平均解码时延；
+设计补偿重传机制以降低解码端解码矩阵维度和减小解码时延；
+改进编码系数的设定以降低首部开销。
+最后本文搭建了无人机视频传输实验平台，
+测试E-TCP/NC对无人机视频传输性能的提升。
+
+\section*{未来工作展望}
+在下一步的研究和学习过程中，我们将在以下方面做出改进：
+\begin{enumerate}[fullwidth,itemindent=2em,label=(\arabic*)]
+	\item NC层的编解码过程耗费资源太大。如第\ref{sec:monidiubaoceshijieguo}小节所述，100M网卡在添加了编解码模块后，峰值速度直接降到了12Mbps。这其中有代码优化原因，也有Raspberry Pi性能有限的原因，但本质上是由于编解码本来就耗费资源，而本文又以模块的形式实现E-TCP/NC，导致软中断时间过长，影响最终吞吐率。在今后的工作中，将优化目前代码，寻求新的编解码方式，以便可以同时处理多个字节，降低解码端的开销。
+	\item 目前对TCP报文的处理仅仅覆盖了一部分情况，对于TCP协议的选项字段、URG字段、PSH字段等都未做处理。后期需要改进目前的实现，使E-TCP/NC完全兼容目前的TCP协议。
+\end{enumerate}
