--- a/main.tex
+++ b/main.tex
@@ -45,7 +45,7 @@
 \include{content/chap02}
 \include{content/chap03}
 \include{content/chap04}
-\include{content/chap05}
+%\include{content/chap05}
 
 % 加载论文结论
 \include{content/conclusion}
@@ -63,7 +63,7 @@
 \addcontentsline{toc}{chapter}{参考文献}
 
 % 加载附录文件和个人工作列表
-\include{appendix/appA}						% 非必要章节，主要用以放置测试数据、数学证明或者个人简介
+%\include{appendix/appA}						% 非必要章节，主要用以放置测试数据、数学证明或者个人简介
 \include{appendix/myWork}					% 攻读硕（博）士论文攻读期间取得的科研成果，论文、专利等
 
 \end{document}
