就剩第四章的方阵部分

--- a/appendix/remerciement.tex
+++ b/appendix/remerciement.tex
@@ -11,8 +11,34 @@
 让我从一个青涩少年成长为一个敢于担当的青年。
 7年一路走来，有那么人在帮助我，让我心怀感恩。
 \par
-首先，我要感谢我的导师陈庆春教授，本论文是在陈老师的悉心指导下完成的。在我本科期间，陈老师就指导了我的SRTP，当时陈老师渊博的专业知识、严谨的学术态度让我印象深刻。很自然地，硕士期间我也成为了陈老师的学生。回顾这三年来，陈老师学习上对我的督促，生活上对我的关怀依然历历在目。感谢陈老师将我带入项目组，在项目组中，我的动手能力、分析问题能力和解决问题的能力得到了很大提高，这对我以后的工作至关重要。
+首先，我要感谢我的导师陈庆春教授，
+本论文是在陈老师的悉心指导下完成的。
+在我本科期间，
+陈老师就指导了我的SRTP，
+当时陈老师渊博的专业知识、严谨的学术态度让我印象深刻。
+很自然地，
+硕士期间我也成为了陈老师的学生。
+回顾这三年来，
+陈老师学习上对我的督促，
+生活上对我的关怀依然历历在目。
+感谢陈老师将我带入项目组，
+在项目组中，
+我的动手能力、分析问题能力和解决问题的能力得到了很大提高，
+这对我以后的工作至关重要。
 \par
-其次，我要感谢实验室的一帮小伙伴们。感谢师兄兰小龙、刘勇和银帆博士，三年来给了我很多学业上的帮助。感谢小冰冰黄寒冰，大哥李玉鑫，小頔頔原頔，刘洋、旭大爷周旭，张勇，还有学霸郑蕾博士，你们给我研究生生活添加了不少欢乐。
+其次，我要感谢实验室的一帮小伙伴们。
+感谢师兄兰小龙、刘勇和银帆博士，
+三年来给了我很多学业上的帮助。
+感谢小冰冰黄寒冰，
+大哥李玉鑫，
+小頔頔原頔，
+刘洋、旭大爷周旭，张勇，
+还有学霸郑蕾博士，
+你们给我研究生生活添加了不少欢乐。
 \par
-需要特别感谢的是我的父母。父母的养育之恩无以为报，他们是我十多年求学路上的坚强后盾，在我面临人生选择的迷茫之际，为我排忧解难，他们对我无私的爱与照顾是我不断前进的动力。
+需要特别感谢的是我的父母。
+父母的养育之恩无以为报，
+他们是我十多年求学路上的坚强后盾，
+在我面临人生选择的迷茫之际，
+为我排忧解难，
+他们对我无私的爱与照顾是我不断前进的动力。
