还剩一点儿图

--- a/content/chap01.tex
+++ b/content/chap01.tex
@@ -327,5 +327,5 @@ TCP/NC可以抵抗有损网络的随机丢包。
 \par
 第三章主要讲TCP/NC协议的实现技术细节。阐述了如何对数据包进行编码，给出了在Raspberry Pi上实现TCP/NC的技术方案。对TCP/NC协议实现过程中的关键环节进行了详细描述，包括NC头部设计、NC编码缓存、NC解码缓存和NC层接收窗口的计算。最后在模拟无人机视频传输丢包环境中，测试TCP/NC的实际性能。
 \par
-第四章对
+第四章搭建了无人机测试环境。将部署了E-TCP/NC改进协议的Raspberry Pi搭载在无人机上，通过WIFI无线链路来与地面站通信。 验证E-TCP/NC对无人机视频传输性能的改善。
 
