--- a/preface/cabstract.tex
+++ b/preface/cabstract.tex
@@ -53,9 +53,9 @@
 	并将其移植入嵌入式设备。
 	在模拟丢包网络中，
 	对流水线编码TCP进行性能测试，
-	与TCP-Reno协议进行性能对比，
-	分析影响其性能的关键因素。
-	在了解流水线编码TCP协议不足的情形下，
+	与TCP-Reno协议进行性能对比。
+	%%分析影响其性能的关键因素。
+	在了解编码TCP协议不足的基础上，
 	对其做了进一步改进，
 	以更好地适应无人机视频传输应用场景。
 	提出了前向重传机制以应对一个RTO内的突发丢包；
