--- a/setup/package.tex
+++ b/setup/package.tex
@@ -25,6 +25,8 @@
 %\renewcommand{\algorithmcfname}{算法}
 \usepackage{colortbl}
 
+%%\usepackage{minted}
+
 \usepackage{listings}
 \usepackage{float}
 \renewcommand{\lstlistingname}{代码}
