--- a/THUBeamer-master/ppt01.tex
+++ b/THUBeamer-master/ppt01.tex
@@ -2,14 +2,14 @@
   \frame
   {
     \frametitle{\secname~ }
-    \begin{block}{凸包围体技术}
-      在计算机图形学领域里的各种算法中发挥着重要作用，
-      如优化渲染和建模过程，加速求交、碰撞检测等算法。
+    \begin{block}{TCP在无线网络中的局限性}
+    	由于无线网络误码率高，
+    	传统TCP无法很好应对无线网络中的数据传输。
     \end{block}
-    \begin{block}{碰撞检测问题}
-   计算机图形学、虚拟现实等领域中的研究热点，
-   是计算机模拟真实环境中不可或缺的技术，
-   在物理仿真及游戏领域里应用十分广泛。
+    \begin{block}{TCP/NC\footfullcite{Sundararajan2009}}
+    	在OSI协议栈的TCP层和NC层添加一个网络编码层。
+		在网络编码层对数据包进行冗余编码，
+		掩盖链路中出现的丢包。
     \end{block}
     \note{
       凸包围体技术在计算机图形学领域里的各种算法中发挥着重要作用，如优化渲染和建模过程，加速求交、碰撞检测等算法。
