--- a/THUBeamer-master/tanglei_thesis_report.tex
+++ b/THUBeamer-master/tanglei_thesis_report.tex
@@ -25,6 +25,7 @@
 \defbibheading{bibliography}[\bibname]{} %avoid printbibliography 自动生成目录
 \addbibresource{ref/papers-bib-in-google.bib}
 \addbibresource{ref/chinese-ref.bib}
+\addbibresource{../ref/refs.bib}
 %\setbeamertemplate{bibliography item}{\insertbiblabel} %将列表中默认的丑陋的icon 改成数字,或者下面这个也行
 \setbeamertemplate{bibliography item}[text] % [ref](http://tex.stackexchange.com/questions/68080/beamer-bibliography-icon)
 %\setbeamertemplate{footline}[frame number]{}
@@ -78,10 +79,10 @@
 
 \title{Towards zero loss for TCP in wireless networks}
 %\author{唐磊}
-\author[董泽锋]{(申请西南交通大学工学硕士学位论文答辩报告)\vskip 20pt学~~~~~~生：董~~~~~泽~~~~~锋\vskip 5pt 指导教师：陈~~庆~~春~~教授}
-\institute[西南交通大学~信息学院]{\small \vskip 38pt信息编码与传输重点实验室 }
+\author[董泽锋]{~\vskip 20pt学~~~~~~生：董~~~~~泽~~~~~锋\vskip 5pt 指导教师：陈~~庆~~春~~教授}
+\institute[西南交通大学~信息学院]{\small \vskip 58pt信息编码与传输重点实验室 }
 %\date{2015-06-07}
-\date{\small \vskip -17pt二〇一七年五月}
+\date{\small \vskip -17pt二〇一七年四月}
 %\date{\today}
 
 
